2012-08-18 Riccardo Mottola <rm@gnu.org>

	* GRText.m
	* GRBox.m
	* GRCircle.m
	* GRBezierPath.m
	Initialize colors with RGB color space.

2012-08-18 Riccardo Mottola <rm@gnu.org>

	* GRText.m:
	New file format, colors RGB encoded

2012-08-17 Riccardo Mottola <rm@gnu.org>

	* GRBox.m
	* GRCircle.m
	* GRBezierPath.m
	* Graphos.h
	New file format, colors RGB encoded/decoded.
	
2012-08-14 Riccardo Mottola <rm@gnu.org>

	* GRBox.m
	* GRCircle.m
	* GRBezierPath.m
	* GRDocView.m
	More robust handling of BOOLs.

	* GRText.m
	More robust handling of BOOLs and fill only if filled.

	* GRPropsEditor.m
	More robust handling of nil properties.
	
2012-04-21 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	Decode ordering in files (only if version >= 0.3)

2012-04-21 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	Encode ordering in files.

2012-04-21 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	Add version encoding to files.

2012-03-08 Riccardo Mottola <rm@gnu.org>

	* GRPropsEditor.m:
	Do not encode nil color.

2011-12-22 Riccardo Mottola <rm@gnu.org>

	* GRDocument.[h,m]:
	Store the file data and load it ater the nib is initialized.

2011-12-20 Riccardo Mottola <rm@gnu.org>

	* GRDocument.[h,m]:
	* English.lproj/GRDocument.nib
	Init view only in the interface file.

2011-12-20 Riccardo Mottola <rm@gnu.org>

	* GRDocument.m:
	Fix init method.

2011-12-19 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m:
	Guard against invalid print info values

2011-10-30 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	Update object inspector after object creation.

2011-10-29 Riccardo Mottola <rm@gnu.org>

	* GRText.[h,m]
	* GRDocView.m
	Initialize text object with properties.

2011-10-28 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.h
	* GRBezierPath.m
	* GRCircle.h
	* GRCircle.m
	* GRPathObject.h
	* GRPathObject.m
	Refactor path properties into super-class

	* GRBezierPath.h
	* GRBezierPath.m
	* GRDocView.m
	Initialze Bezier Path with properties.

2011-10-27 Riccardo Mottola <rm@gnu.org>
